--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "@tanstack/react-query": "^5.8.4",
+    "react-hot-toast": "^2.4.1",
+    "zustand": "^4.4.6",
+    "tailwind-merge": "^2.0.0",
+    "clsx": "^2.0.0"
   },
   "devDependencies": {
     "@capacitor/android": "^5.5.1",
