--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,46 @@
-# Dependencies
-node_modules/
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
+venv/
+env/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
 
 # Build outputs
 dist/
+dist-electron/
 build/
-*.egg-info/
-frontend/dist/
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-frontend/.env
+*.local
 
 # IDE
 .vscode/
@@ -24,35 +48,23 @@ frontend/.env
 *.swp
 *.swo
 *~
-
-# OS
 .DS_Store
-Thumbs.db
+
+# Capacitor
+android/
+ios/
+.capacitor/
 
 # Logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+logs/
 
-# Electron
-out/
-release/
+# Testing
+.coverage
+htmlcov/
+.pytest_cache/
 
-# Capacitor
-.capacitor/
-ios/
-android/
-frontend/ios/
-frontend/android/
-
-# Python
-venv/
-env/
-ENV/
-.venv
-backend/venv/
-
-# MongoDB
-*.db
-*.db-journal
+# Temporary files
+*.tmp
+*.temp
+.cache/
