--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,51 +1,78 @@
 {
-  "name": "genai-browser",
+  "name": "lernova",
+  "private": true,
   "version": "1.0.0",
-  "description": "GenAI Browser - Cross-platform application with React, Electron, and Capacitor",
-  "main": "frontend/electron/main.js",
+  "homepage": "./",
   "scripts": {
-    "dev": "cd frontend && vite",
-    "build": "cd frontend && vite build",
-    "build:web": "cd frontend && vite build",
-    "preview": "cd frontend && vite preview",
-    "dev:electron": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron frontend/electron/main.js\"",
-    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron frontend/electron/main.js\"",
-    "electron:build": "npm run build:web && electron-builder",
-    "cap:sync": "cd frontend && capacitor sync",
-    "cap:ios": "cd frontend && capacitor sync ios && npx cap open ios",
-    "cap:android": "cd frontend && capacitor sync android && npx cap open android",
-    "backend:dev": "cd backend && uvicorn main:app --reload --host 0.0.0.0 --port 8000"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "electron": "electron .",
+    "electron:build": "electron-builder",
+    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
+    "capacitor:init": "npx cap init",
+    "capacitor:add:android": "npx cap add android",
+    "capacitor:add:ios": "npx cap add ios",
+    "capacitor:sync": "npx cap sync",
+    "capacitor:open:android": "npx cap open android",
+    "capacitor:open:ios": "npx cap open ios"
   },
-  "keywords": ["genai", "browser", "react", "electron", "capacitor"],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
+    "@capacitor/android": "^5.6.0",
+    "@capacitor/core": "^5.6.0",
+    "@capacitor/ios": "^5.6.0",
+    "@capacitor/keyboard": "^5.0.6",
+    "@capacitor/splash-screen": "^5.0.6",
+    "axios": "^1.6.5",
+    "clsx": "^2.1.0",
+    "embedded-webview": "file:../embedded-webview",
+    "lucide-react": "^0.309.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2",
-    "@tanstack/react-query": "^5.8.4",
-    "react-hot-toast": "^2.4.1",
-    "zustand": "^4.4.6",
-    "tailwind-merge": "^2.0.0",
-    "clsx": "^2.0.0"
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
-    "@capacitor/android": "^5.5.1",
-    "@capacitor/cli": "^5.5.1",
-    "@capacitor/core": "^5.5.1",
-    "@capacitor/ios": "^5.5.1",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@capacitor/cli": "^5.6.0",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
-    "electron": "^28.0.0",
+    "electron": "^28.1.3",
     "electron-builder": "^24.9.1",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.8",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.11",
     "wait-on": "^7.2.0"
+  },
+  "main": "electron/main.cjs",
+  "build": {
+    "appId": "com.aichat.browser",
+    "productName": "AiChat Browser",
+    "directories": {
+      "output": "dist-electron"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*"
+    ],
+    "win": {
+      "target": [
+        "nsis"
+      ],
+      "icon": "public/icon.png"
+    },
+    "mac": {
+      "target": [
+        "dmg"
+      ],
+      "icon": "public/icon.png"
+    },
+    "linux": {
+      "target": [
+        "AppImage"
+      ],
+      "icon": "public/icon.png"
+    }
   }
 }
